--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -3,7 +3,7 @@
   "changelog": [
     "@changesets/changelog-github",
     {
-      "repo": "ckimrie/vpn"
+      "repo": "ckimrie/cdk"
     }
   ],
   "commit": false,
