refactor: optimize TypeScript project references
- Add packages/*/dist to exclude patterns
- Include test-app/cdk.out and root coverage in excludes
- Ensure comprehensive exclusion of build artifacts across all packages
- Maintain proper project reference structure for package builds

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,15 @@
     "strictPropertyInitialization": false,
     "typeRoots": ["./node_modules/@types"]
   },
-  "exclude": ["node_modules", "cdk.out", "packages/*/lib", "packages/*/coverage"],
+  "exclude": [
+    "node_modules", 
+    "cdk.out", 
+    "packages/*/lib", 
+    "packages/*/dist",
+    "packages/*/coverage",
+    "test-app/cdk.out",
+    "coverage"
+  ],
   "references": [
     {
       "path": "./packages/vpn"
