refactor: complete monorepo consolidation with testing validation
- Update root package.json scripts to run tools directly instead of delegating
- Add test-app specific ESLint rules to allow CDK app patterns
- Fix formatting across all files using consolidated Prettier config
- Verify all configurations work: linting, testing, formatting, building
- Maintain 100% test coverage with consolidated Jest configuration

✅ All CI tools now run from root level
✅ Package-level configs removed
✅ Per-package NPM publishing preserved

--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
   "scripts": {
     "build": "pnpm -r build",
     "watch": "pnpm -r watch",
-    "test": "pnpm -r test",
-    "test:coverage": "pnpm -r test:coverage",
-    "lint": "pnpm -r lint",
-    "lint:fix": "pnpm -r lint:fix",
-    "format": "pnpm -r format",
-    "format:check": "pnpm -r format:check",
-    "clean": "pnpm -r clean",
+    "test": "jest",
+    "test:coverage": "jest --coverage",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write \"**/*.{ts,tsx,json,md}\"",
+    "format:check": "prettier --check \"**/*.{ts,tsx,json,md}\"",
+    "clean": "pnpm -r clean && rm -rf coverage",
     "changeset": "changeset",
     "auto-changeset": "node scripts/auto-changeset.js",
     "version-packages": "changeset version",
