fix: convert config files to ES modules
- Add "type": "module" to package.json for ES module support
- Convert jest.config.js to ES module syntax (export default)
- Convert .prettierrc.js to ES module syntax (export default)
- Convert scripts/auto-changeset.js to ES module imports
- Resolves ESLint CI failure: 'Cannot use import statement outside a module'

All tools now work with consistent ES module syntax across the project.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@ckimrie/cdk",
   "version": "0.1.0",
   "description": "A collection of AWS CDK constructs for common use cases",
+  "type": "module",
   "private": true,
   "author": "Cameron Kimrie",
   "license": "MIT",
