feat: consolidate monorepo configs (#1)
* refactor: remove duplicate package-level configs

- Remove packages/vpn/jest.config.js (covered by root config)
- Remove packages/vpn/eslint.config.js (covered by root config)

All linting and testing now runs exclusively from root level.

* refactor: enhance root Jest config for complete package coverage

- Add collectCoverageFrom patterns to include all package lib directories
- Set coverage directory and reporters for consistent output
- Maintain 100% coverage threshold requirement
- All package tests now run from single root configuration

* refactor: improve root ESLint config for package support

- Add TypeScript project references for all packages
- Include packages/*/dist/ in ignore patterns
- Add test-app/cdk.out/ to ignored directories
- Ensure comprehensive coverage of all package TypeScript configurations

* refactor: update package scripts to use root configs

- Remove test, lint, and format scripts from package level
- Keep only package-specific build, watch, clean, and prepare scripts
- All testing, linting, and formatting now runs from root level using consolidated configs
- Preserves NPM publishing capabilities with build scripts

* refactor: optimize TypeScript project references

- Add packages/*/dist to exclude patterns
- Include test-app/cdk.out and root coverage in excludes
- Ensure comprehensive exclusion of build artifacts across all packages
- Maintain proper project reference structure for package builds

* refactor: complete monorepo consolidation with testing validation

- Update root package.json scripts to run tools directly instead of delegating
- Add test-app specific ESLint rules to allow CDK app patterns
- Fix formatting across all files using consolidated Prettier config
- Verify all configurations work: linting, testing, formatting, building
- Maintain 100% test coverage with consolidated Jest configuration

✅ All CI tools now run from root level
✅ Package-level configs removed
✅ Per-packa

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@ckimrie/cdk",
   "version": "0.1.0",
   "description": "A collection of AWS CDK constructs for common use cases",
+  "type": "module",
   "private": true,
   "author": "Cameron Kimrie",
   "license": "MIT",
@@ -20,13 +21,13 @@
   "scripts": {
     "build": "pnpm -r build",
     "watch": "pnpm -r watch",
-    "test": "pnpm -r test",
-    "test:coverage": "pnpm -r test:coverage",
-    "lint": "pnpm -r lint",
-    "lint:fix": "pnpm -r lint:fix",
-    "format": "pnpm -r format",
-    "format:check": "pnpm -r format:check",
-    "clean": "pnpm -r clean",
+    "test": "jest",
+    "test:coverage": "jest --coverage",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write \"**/*.{ts,tsx,json,md}\"",
+    "format:check": "prettier --check --log-level debug --cache=false \"**/*.{ts,tsx,json,md}\"",
+    "clean": "pnpm -r clean && rm -rf coverage",
     "changeset": "changeset",
     "auto-changeset": "node scripts/auto-changeset.js",
     "version-packages": "changeset version",
@@ -43,7 +44,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.7.0",
-    "prettier": "^3.0.0",
+    "prettier": "3.6.1",
     "ts-jest": "^29.2.5",
     "typescript": "~5.6.3"
   },
