--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 *.js
 !jest.config.js
+!.prettierrc.js
 !scripts/*.js
 *.d.ts
 node_modules
@@ -9,4 +10,4 @@ node_modules
 cdk.out
 coverage
 .idea
-packages/*/lib/*.tsbuildinfo
+packages/*/tsconfig.tsbuildinfo
