--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write \"**/*.{ts,tsx,json,md}\"",
-    "format:check": "prettier --check --log-level debug --cache=false \"**/*.{ts,tsx,json,md}\"",
+    "format:check": "prettier --check --cache=false \"**/*.{ts,tsx,json,md}\"",
     "clean": "pnpm -r clean && rm -rf coverage",
     "changeset": "changeset",
     "auto-changeset": "node scripts/auto-changeset.js",
     "version-packages": "changeset version",
-    "release": "pnpm build && changeset publish"
+    "release": "pnpm build && changeset publish",
+    "prepare": "husky",
+    "check-lockfile": "pnpm install --frozen-lockfile"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.1",
@@ -43,6 +45,7 @@
     "eslint": "^9.0.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "prettier": "3.6.1",
     "ts-jest": "^29.2.5",
