--- a/packages/vpn/package.json
+++ b/packages/vpn/package.json
@@ -38,7 +38,6 @@
   },
   "devDependencies": {
     "@types/node-forge": "^1.3.11",
-    "aws-sdk": "^2.1500.0",
     "esbuild": "^0.25.9"
   },
   "peerDependencies": {
@@ -46,7 +45,12 @@
     "constructs": "^10.0.0"
   },
   "dependencies": {
-    "node-forge": "^1.3.1"
+    "@aws-sdk/client-acm": "^3.864.0",
+    "@aws-sdk/client-ec2": "^3.868.0",
+    "@aws-sdk/client-secrets-manager": "^3.864.0",
+    "@aws-sdk/client-ssm": "^3.864.0",
+    "node-forge": "^1.3.1",
+    "esbuild": "^0.25.9"
   },
   "engines": {
     "node": ">=18.0.0"
