--- a/packages/vpn/package.json
+++ b/packages/vpn/package.json
@@ -49,8 +49,8 @@
     "@aws-sdk/client-ec2": "^3.868.0",
     "@aws-sdk/client-secrets-manager": "^3.864.0",
     "@aws-sdk/client-ssm": "^3.864.0",
-    "node-forge": "^1.3.1",
-    "esbuild": "^0.25.9"
+    "esbuild": "^0.25.9",
+    "node-forge": "^1.3.1"
   },
   "engines": {
     "node": ">=18.0.0"
